@@ -1,6 +1,8 @@
 Mar 10, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
 - store all map names lowercase, otherwise many maps are reported as
   not installed
+- #define ZEXPORT if not already defined to fix compilation problems. Thanks
+  Pierre Pronchery
 
 Mar 07, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
 - game types for westernq3
